openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: huntreport
  labels:
    app: huntreport
