openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntreport
  labels:
    app: huntreport
spec:
  selector:
    app: huntreport
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
