openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: huntreport
  labels:
    app: huntreport
spec:
  to:
    kind: Service
    name: huntreport
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
